--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
       <version>${slf4j-version}</version>
       <scope>test</scope>
     </dependency>
+	<!-- https://mvnrepository.com/artifact/org.drools/drools-core -->
+	<dependency>
+	    <groupId>org.drools</groupId>
+	    <artifactId>drools-core</artifactId>
+	    <version>7.31.0.Final</version>
+	</dependency>
+
   </dependencies>
 
   <build>
