--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.mastertheboss</groupId>
-  <artifactId>drools-project</artifactId>
+  <groupId>test</groupId>
+  <artifactId>test-drools</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
 
-  <name>drools-project</name>
+  <name>rule-engine</name>
   <url>http://drools.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools-version>7.25.0.Final</drools-version>
-    <slf4j-version>1.7.26</slf4j-version>
+    <slf4j-version>1.7.25</slf4j-version>
     <junit-version>4.12</junit-version>
+    <drools-version>7.19.0.Final</drools-version>
   </properties>
 
   <dependencyManagement>
@@ -23,20 +23,28 @@
         <groupId>org.drools</groupId>
         <artifactId>drools-bom</artifactId>
         <type>pom</type>
-        <version>${drools-version}</version>
+        <version>7.24.0.t043</version>
         <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
-
-    <dependency>
-        <groupId>org.drools</groupId>
-        <artifactId>drools-compiler</artifactId>
-        <scope>test</scope>
-      </dependency>
-
+	<dependency>
+	    <groupId>org.kie</groupId>
+	    <artifactId>kie-api</artifactId>
+	    <version>${drools-version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.drools</groupId>
+	    <artifactId>drools-compiler</artifactId>
+	    <version>${drools-version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.drools</groupId>
+	    <artifactId>drools-core</artifactId>
+	    <version>${drools-version}</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -47,44 +55,63 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>${slf4j-version}</version>
-      <scope>test</scope>
     </dependency>
-	<!-- https://mvnrepository.com/artifact/org.drools/drools-core -->
-	<dependency>
-	    <groupId>org.drools</groupId>
-	    <artifactId>drools-core</artifactId>
-	    <version>7.31.0.Final</version>
-	</dependency>
-
+    <dependency>
+      <groupId>commons-daemon</groupId>
+      <artifactId>commons-daemon</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
-  
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/lib</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.ablehealth.RabbitListener</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.kie</groupId>
         <artifactId>kie-maven-plugin</artifactId>
-        <version>${drools-version}</version>
+        <version>7.19.0.Final</version>
         <extensions>true</extensions>
       </plugin>
-      
     </plugins>
-	   <resources>
-	     <resource>
-	       <directory>src/main/resources</directory>
-	     </resource>
-	     <resource>
-	       <directory>src/test/resources</directory>
-	     </resource>
-	   </resources>
+
   </build>
 </project>
